bug fix: hover was broken on header links

--- a/meet-the-need/app/assets/stylesheets/application.scss
+++ b/meet-the-need/app/assets/stylesheets/application.scss
@@ -74,6 +74,8 @@ h2 {
 a:visited,
 a:focus,
 a:hover {
+  background-color: inherit !important;
+  color: #333;
   color: $green;
   text-decoration: none;
 }
@@ -300,23 +302,4 @@ input[type=submit] {
   background: #FFFFFF;
 }
 
-.sign-up-header {
-  font-size: 24px;
-  text-align: none;
-  padding-bottom: 20px;
-}
-
-.log-in {
-  color: #FFFFFF;
-  position: relative;
-  bottom: 25px;
-}
-
-.log-in a:visited, a:focus, a:hover {
-  background-color: $green;
-}
-
-.green-button.button-shape.log-in {
-  color: #FFFFFF;
-}
 
